--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
 .hide {
     display: none;
 }
+
+
+
+
+@media only screen and (max-width: 768px) {
+    body {
+      background-color: lightblue;
+    }
+  }
