yay questions display

--- a/styles.css
+++ b/styles.css
@@ -13,5 +13,18 @@
 
 
   #title {
-      color: rgb(21, 21, 119);
+      color: rgb(155, 56, 221);
   }
+
+  #questions {
+      color: rgb(117, 197, 71);
+  }
+
+  #instructions {
+      color: blue; 
+      
+  }
+
+
+
+
