--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,20 @@
+body {
+    background-color: rgb(205, 202, 241);
+  }
+
+  #time {
+      font: bold;
+  }
+
 .hide {
     display: none;
 }
 
-
-
+#time {
+    color: rgb(204, 14, 125);
+    font-size: 20px;
+    
+}
 
 @media only screen and (max-width: 768px) {
     body {
@@ -14,17 +25,20 @@
 
   #title {
       color: rgb(155, 56, 221);
+      font-family: verdana;
+      font-size: 20px;
   }
 
   #questions {
       color: rgb(117, 197, 71);
+      text-align:center;
   }
 
   #instructions {
       color: blue; 
-      
+      text-align:center;
+      font-family: verdana;
+      font-size: 15px;
   }
 
-
-
-
+ 
